amélioration affichage tableaux

--- a/accueil.html
+++ b/accueil.html
@@ -8,9 +8,11 @@
   </head>
 
   <body>
-    <div class="title1">
+    <section>
+      <div class="title1">
       <h1>C.V de Nidhal HAMILA</h1>
     </div>
+  </section>
     <div>
       <p>Lorem ipsum <strong>dolor</strong> sit.</p>
       <figure>
@@ -18,17 +20,21 @@
         <figcaption>Ma Photo</figcaption>
       </figure>
     </div>
-
-    <div class="title">
-      <a href="Hobby.html">
-        <h2>My Hoobies</h2>
-      </a>
-    </div>
-
+    <nav>
+      <ul>
+        <li>
+          <a href="Hobby.html">
+            <h2>My Hoobies</h2>
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <h2>Contact</h2>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <div>
-      <a href="contact.html">
-        <h2>Contact</h2>
-      </a>
       <h3>Hamila Nidhal</h3>
       <p>
         rue des chemins à trouver <br />
@@ -51,8 +57,9 @@
     </div>
 
     <div class="item">
-      <h2>Savoir faire</h2>
+      
       <table>
+        <caption><h2>Savoir faire</h2></caption>
         <tr>
           <td>Lorem ipsum dolor sit amet.</td>
           <td>Lorem ipsum dolor sit amet.</td>
@@ -65,5 +72,9 @@
         </tr>
       </table>
     </div>
+    
+    <footer>
+      Nidhal Hamila depuis 1976
+    </footer>
   </body>
 </html>
