--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Contact</title>
-</head>
+  </head>
 
-<body>
-    <div class="title">
-        <a href="accueil.html">
+  <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="accueil.html">
             <h2>Accueil</h2>
-        </a>
-    </div>
-
-    <div class="title">
-        <a href="Hobby.html">
+          </a>
+        </li>
+        <li>
+          <a href="Hobby.html">
             <h2>My Hoobies</h2>
-        </a>
-    </div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+<form action="">
+  <p>
+    <input type="text" name="Prénom">
+  </p>
+</form>
 
     <div>
-        <h3>Hamila Nidhal</h3>
-    <p>37 rue Niki de Saint Phalle <br>
-        38400 Saint Martin d'Hères</p>
+      <h3>Hamila Nidhal</h3>
+      <p>
+        37 rue Niki de Saint Phalle <br />
+        38400 Saint Martin d'Hères
+      </p>
     </div>
-</body>
-
-
+    <footer>
+      Nidhal Hamila depuis 1976
+    </footer>
+  </body>
 </html>
