Mise à Jour du CV

--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Contact</title>
   </head>
 
   <body>
+    <header>
+      <div class="title1">
+      <h1>C.V de Nidhal HAMILA</h1>
+    </div>
+  </header>
     <nav>
       <ul>
         <li>
-          <a href="accueil.html">
+          <a href="index.html">
             <h2>Accueil</h2>
           </a>
         </li>
@@ -23,11 +29,58 @@
       </ul>
     </nav>
 
-<form action="">
-  <p>
-    <input type="text" name="Prénom">
-  </p>
-</form>
+    <form class="form" action="https://httpbin.org/post" method="post">
+      <P>Pour nous contacter :</P>
+
+      <div>
+          <label for="name"> Nom :</label>
+          <input type="text" id="name" name="user_name" required>
+      </div>
+
+      <div>
+          <label for="firstname">Prénom</label>
+          <input type="text" id="firstname" name="user_name" required>
+      </div>
+
+      <div>
+          <label for="mail"> e-mail :</label>
+          <input type="radio" id="mail" name="contact">
+      </div>
+
+      <div>
+          <label for="telephone"> Téléphone :</label>
+          <input type="radio" id="telephone" name="contact">
+      </div>
+
+      <div>
+          <label for="contact">  </label>
+              <input type="text" id="contact" name="contact">
+      </div>
+
+      <div>
+          <label for="Lorem">Lorem ipsum dolor sit amet ?</label>
+                   <select name="Lorem" id="Lorem">
+                      <option value="Quand">Quand ?</option>
+                      <option value="Quoi">Quoi ?</option>
+                      <option value="Qui">Qui ?</option>
+              </select>
+
+      </div>
+
+      <div>
+          <label for="msg">Message :</label>
+          <textarea id="msg" name="user_message"></textarea>
+      </div><br>
+
+  <div>
+      <button type="submit">Envoyer le message</button>
+  </div>
+
+  <div>
+      <a href="mailto:nidhal.hamila@le-campus-numerique.fr?subject=contact"> En cas d'urgence, nous contacter via ce lien</a>
+  </div>
+
+  </form>
 
     <div>
       <h3>Hamila Nidhal</h3>
@@ -39,5 +92,8 @@
     <footer>
       Nidhal Hamila depuis 1976
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
